--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,6 +1,54 @@
 @import "_variable"; 
 @import "_normalize";
 @import "_reset" ;
-body{
-    background-color:$color1
+@import "nav";
+
+html {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  *, *:before, *:after {
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
+  }
+
+header{
+    background-image:url("https://img.youtube.com/vi/tIA_vrBDC1g/maxresdefault.jpg");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+    &::before{
+        content:"";
+        display: inline-block;
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, black 100%);
+        width: 100%;
+        height: 50%;
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        opacity: 0.55;
+    }
+    // inline-block for w/h , absolute position for not to squeeze string out
+    // need to set 'position' so z-inedex worked
+    &::after{
+        content: "";
+        display: inline-block;
+        background-color: rgba(0, 0, 0, 0.3);
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: -2;
+        top: 0;
+        left: 0;
+    }
 }
+
+
+
